--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,8 @@ a:hover {
 /* Flexbox for navigation links */
 .nav-links {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center; /* Center the links horizontally */
   gap: 20px;
 }
@@ -283,17 +285,22 @@ header h1 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: inherit;
   gap: 20px;
   margin: 0 auto;
 }
 
 .education-card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   background-color: #333;
   border-radius: 10px;
   padding: 20px;
   width: 300px;
   gap: 20px;
+  min-height: 250px;
   margin: 0 auto;
   transition: transform 0.3s, box-shadow 0.3s;
   flex-grow: 1;
@@ -302,33 +309,41 @@ header h1 {
 .education-card:hover {
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .education-logo img {
-  width: 60px;
-  height: 60px;
+  max-width: auto !important;
+  max-height: auto !important;
+  min-height: auto !important;
+  max-width: auto !important;
   border-radius: 50%;
   margin-right: 20px;
+  align-content: center !important;
 }
 
 /* Section Styling for Educational Experience */
 
 .education-info h6 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  min-width: auto;
+  min-height: auto;
+  max-width: auto !important;
+  max-height: auto !important;
   margin: 0;
   color: #fff;
   font-size: 18px;
 }
 
 .education-info p {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  min-width: auto;
+  min-height: auto;
+  max-width: auto !important;
+  max-height: auto !important;
   margin: 5px 0;
   color: #ddd;
 }
+
+/* Educational Experience Section with Accordion */
 
 .accordion-button {
   width: 100%;
