--- a/styles.css
+++ b/styles.css
@@ -397,21 +397,27 @@ header h1 {
 }
 
 .column {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   max-width: 30%;
   padding: 10px;
   box-sizing: border-box;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   position: relative;
 }
 
 .image {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   width: 100%;
-  width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 10px;
 }
 
