--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,11 @@
 }
 
 /* Apply flexbox to make the footer stick to the bottom */
-html, body {
+html {
   height: 100%; /* Ensure the body takes the full height of the screen */
   width: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 /* Body Styling */
